backend/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    AND
    CARACTER
    COMA
    COR_DER
    COR_IZQ
    DIFERENTE
    DIV_IGUAL
    FLECHA
    FLECHA_DOBLE
    IGUAL_IGUAL
    LLAVE_DER
    LLAVE_IZQ
    MAS_IGUAL
    MAYOR_IGUAL
    MAYOR_QUE
    MENOR_IGUAL
    MENOR_QUE
    MENOS_IGUAL
    MOD_IGUAL
    OR
    POR_IGUAL
    PUNTO
    R_BREAK
    R_CHAR
    R_CONTINUE
    R_ELSE
    R_FN
    R_IF
    R_LOOP
    R_MATCH
    R_RETURN
    R_STRUCT
    R_WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
Rule 5     instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
Rule 6     instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA
Rule 7     tipo -> R_I32
Rule 8     tipo -> R_F64
Rule 9     tipo -> R_STRING
Rule 10    tipo -> R_BOOL
Rule 11    expresion -> expresion MAS expresion
Rule 12    expresion -> expresion MENOS expresion
Rule 13    expresion -> expresion POR expresion
Rule 14    expresion -> expresion DIV expresion
Rule 15    expresion -> expresion MOD expresion
Rule 16    expresion -> ENTERO
Rule 17    expresion -> DECIMAL
Rule 18    expresion -> CADENA
Rule 19    expresion -> R_TRUE
Rule 20    expresion -> R_FALSE
Rule 21    expresion -> ID

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 
CADENA               : 18
CARACTER             : 
COMA                 : 
COR_DER              : 
COR_IZQ              : 
DECIMAL              : 17
DIFERENTE            : 
DIV                  : 14
DIV_IGUAL            : 
DOS_PUNTOS           : 4 5
ENTERO               : 16
FLECHA               : 
FLECHA_DOBLE         : 
ID                   : 4 5 21
IGUAL                : 4 5
IGUAL_IGUAL          : 
LLAVE_DER            : 
LLAVE_IZQ            : 
MAS                  : 11
MAS_IGUAL            : 
MAYOR_IGUAL          : 
MAYOR_QUE            : 
MENOR_IGUAL          : 
MENOR_QUE            : 
MENOS                : 12
MENOS_IGUAL          : 
MOD                  : 15
MOD_IGUAL            : 
NOT                  : 6
OR                   : 
PAR_DER              : 6
PAR_IZQ              : 6
POR                  : 13
POR_IGUAL            : 
PUNTO                : 
PUNTO_COMA           : 4 5 6
R_BOOL               : 10
R_BREAK              : 
R_CHAR               : 
R_CONTINUE           : 
R_ELSE               : 
R_F64                : 8
R_FALSE              : 20
R_FN                 : 
R_I32                : 7
R_IF                 : 
R_LET                : 4 5
R_LOOP               : 
R_MATCH              : 
R_MUT                : 4
R_PRINTLN            : 6
R_RETURN             : 
R_STRING             : 9
R_STRUCT             : 
R_TRUE               : 19
R_WHILE              : 
error                : 

Nonterminals, with rules where they appear

expresion            : 4 5 6 11 11 12 12 13 13 14 14 15 15
instruccion          : 2 3
instrucciones        : 1 2
programa             : 0
tipo                 : 4 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
    (5) instruccion -> . R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
    (6) instruccion -> . R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA

    R_LET           shift and go to state 4
    R_PRINTLN       shift and go to state 5

    programa                       shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
    (5) instruccion -> . R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
    (6) instruccion -> . R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA

    $end            reduce using rule 1 (programa -> instrucciones .)
    R_LET           shift and go to state 4
    R_PRINTLN       shift and go to state 5

    instruccion                    shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    R_LET           reduce using rule 3 (instrucciones -> instruccion .)
    R_PRINTLN       reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> R_LET . R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA
    (5) instruccion -> R_LET . ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA

    R_MUT           shift and go to state 7
    ID              shift and go to state 8


state 5

    (6) instruccion -> R_PRINTLN . NOT PAR_IZQ expresion PAR_DER PUNTO_COMA

    NOT             shift and go to state 9


state 6

    (2) instrucciones -> instrucciones instruccion .

    R_LET           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    R_PRINTLN       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 7

    (4) instruccion -> R_LET R_MUT . ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA

    ID              shift and go to state 10


state 8

    (5) instruccion -> R_LET ID . DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA

    DOS_PUNTOS      shift and go to state 11


state 9

    (6) instruccion -> R_PRINTLN NOT . PAR_IZQ expresion PAR_DER PUNTO_COMA

    PAR_IZQ         shift and go to state 12


state 10

    (4) instruccion -> R_LET R_MUT ID . DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA

    DOS_PUNTOS      shift and go to state 13


state 11

    (5) instruccion -> R_LET ID DOS_PUNTOS . tipo IGUAL expresion PUNTO_COMA
    (7) tipo -> . R_I32
    (8) tipo -> . R_F64
    (9) tipo -> . R_STRING
    (10) tipo -> . R_BOOL

    R_I32           shift and go to state 15
    R_F64           shift and go to state 16
    R_STRING        shift and go to state 17
    R_BOOL          shift and go to state 18

    tipo                           shift and go to state 14

state 12

    (6) instruccion -> R_PRINTLN NOT PAR_IZQ . expresion PAR_DER PUNTO_COMA
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 19

state 13

    (4) instruccion -> R_LET R_MUT ID DOS_PUNTOS . tipo IGUAL expresion PUNTO_COMA
    (7) tipo -> . R_I32
    (8) tipo -> . R_F64
    (9) tipo -> . R_STRING
    (10) tipo -> . R_BOOL

    R_I32           shift and go to state 15
    R_F64           shift and go to state 16
    R_STRING        shift and go to state 17
    R_BOOL          shift and go to state 18

    tipo                           shift and go to state 26

state 14

    (5) instruccion -> R_LET ID DOS_PUNTOS tipo . IGUAL expresion PUNTO_COMA

    IGUAL           shift and go to state 27


state 15

    (7) tipo -> R_I32 .

    IGUAL           reduce using rule 7 (tipo -> R_I32 .)


state 16

    (8) tipo -> R_F64 .

    IGUAL           reduce using rule 8 (tipo -> R_F64 .)


state 17

    (9) tipo -> R_STRING .

    IGUAL           reduce using rule 9 (tipo -> R_STRING .)


state 18

    (10) tipo -> R_BOOL .

    IGUAL           reduce using rule 10 (tipo -> R_BOOL .)


state 19

    (6) instruccion -> R_PRINTLN NOT PAR_IZQ expresion . PAR_DER PUNTO_COMA
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         shift and go to state 28
    MAS             shift and go to state 29
    MENOS           shift and go to state 30
    POR             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33


state 20

    (16) expresion -> ENTERO .

    PAR_DER         reduce using rule 16 (expresion -> ENTERO .)
    MAS             reduce using rule 16 (expresion -> ENTERO .)
    MENOS           reduce using rule 16 (expresion -> ENTERO .)
    POR             reduce using rule 16 (expresion -> ENTERO .)
    DIV             reduce using rule 16 (expresion -> ENTERO .)
    MOD             reduce using rule 16 (expresion -> ENTERO .)
    PUNTO_COMA      reduce using rule 16 (expresion -> ENTERO .)


state 21

    (17) expresion -> DECIMAL .

    PAR_DER         reduce using rule 17 (expresion -> DECIMAL .)
    MAS             reduce using rule 17 (expresion -> DECIMAL .)
    MENOS           reduce using rule 17 (expresion -> DECIMAL .)
    POR             reduce using rule 17 (expresion -> DECIMAL .)
    DIV             reduce using rule 17 (expresion -> DECIMAL .)
    MOD             reduce using rule 17 (expresion -> DECIMAL .)
    PUNTO_COMA      reduce using rule 17 (expresion -> DECIMAL .)


state 22

    (18) expresion -> CADENA .

    PAR_DER         reduce using rule 18 (expresion -> CADENA .)
    MAS             reduce using rule 18 (expresion -> CADENA .)
    MENOS           reduce using rule 18 (expresion -> CADENA .)
    POR             reduce using rule 18 (expresion -> CADENA .)
    DIV             reduce using rule 18 (expresion -> CADENA .)
    MOD             reduce using rule 18 (expresion -> CADENA .)
    PUNTO_COMA      reduce using rule 18 (expresion -> CADENA .)


state 23

    (19) expresion -> R_TRUE .

    PAR_DER         reduce using rule 19 (expresion -> R_TRUE .)
    MAS             reduce using rule 19 (expresion -> R_TRUE .)
    MENOS           reduce using rule 19 (expresion -> R_TRUE .)
    POR             reduce using rule 19 (expresion -> R_TRUE .)
    DIV             reduce using rule 19 (expresion -> R_TRUE .)
    MOD             reduce using rule 19 (expresion -> R_TRUE .)
    PUNTO_COMA      reduce using rule 19 (expresion -> R_TRUE .)


state 24

    (20) expresion -> R_FALSE .

    PAR_DER         reduce using rule 20 (expresion -> R_FALSE .)
    MAS             reduce using rule 20 (expresion -> R_FALSE .)
    MENOS           reduce using rule 20 (expresion -> R_FALSE .)
    POR             reduce using rule 20 (expresion -> R_FALSE .)
    DIV             reduce using rule 20 (expresion -> R_FALSE .)
    MOD             reduce using rule 20 (expresion -> R_FALSE .)
    PUNTO_COMA      reduce using rule 20 (expresion -> R_FALSE .)


state 25

    (21) expresion -> ID .

    PAR_DER         reduce using rule 21 (expresion -> ID .)
    MAS             reduce using rule 21 (expresion -> ID .)
    MENOS           reduce using rule 21 (expresion -> ID .)
    POR             reduce using rule 21 (expresion -> ID .)
    DIV             reduce using rule 21 (expresion -> ID .)
    MOD             reduce using rule 21 (expresion -> ID .)
    PUNTO_COMA      reduce using rule 21 (expresion -> ID .)


state 26

    (4) instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo . IGUAL expresion PUNTO_COMA

    IGUAL           shift and go to state 34


state 27

    (5) instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL . expresion PUNTO_COMA
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 35

state 28

    (6) instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 36


state 29

    (11) expresion -> expresion MAS . expresion
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 37

state 30

    (12) expresion -> expresion MENOS . expresion
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 38

state 31

    (13) expresion -> expresion POR . expresion
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 39

state 32

    (14) expresion -> expresion DIV . expresion
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 40

state 33

    (15) expresion -> expresion MOD . expresion
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 41

state 34

    (4) instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL . expresion PUNTO_COMA
    (11) expresion -> . expresion MAS expresion
    (12) expresion -> . expresion MENOS expresion
    (13) expresion -> . expresion POR expresion
    (14) expresion -> . expresion DIV expresion
    (15) expresion -> . expresion MOD expresion
    (16) expresion -> . ENTERO
    (17) expresion -> . DECIMAL
    (18) expresion -> . CADENA
    (19) expresion -> . R_TRUE
    (20) expresion -> . R_FALSE
    (21) expresion -> . ID

    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    R_TRUE          shift and go to state 23
    R_FALSE         shift and go to state 24
    ID              shift and go to state 25

    expresion                      shift and go to state 42

state 35

    (5) instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion . PUNTO_COMA
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PUNTO_COMA      shift and go to state 43
    MAS             shift and go to state 29
    MENOS           shift and go to state 30
    POR             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33


state 36

    (6) instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA .

    R_LET           reduce using rule 6 (instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA .)
    R_PRINTLN       reduce using rule 6 (instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA .)
    $end            reduce using rule 6 (instruccion -> R_PRINTLN NOT PAR_IZQ expresion PAR_DER PUNTO_COMA .)


state 37

    (11) expresion -> expresion MAS expresion .
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         reduce using rule 11 (expresion -> expresion MAS expresion .)
    MAS             reduce using rule 11 (expresion -> expresion MAS expresion .)
    MENOS           reduce using rule 11 (expresion -> expresion MAS expresion .)
    PUNTO_COMA      reduce using rule 11 (expresion -> expresion MAS expresion .)
    POR             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33

  ! POR             [ reduce using rule 11 (expresion -> expresion MAS expresion .) ]
  ! DIV             [ reduce using rule 11 (expresion -> expresion MAS expresion .) ]
  ! MOD             [ reduce using rule 11 (expresion -> expresion MAS expresion .) ]
  ! MAS             [ shift and go to state 29 ]
  ! MENOS           [ shift and go to state 30 ]


state 38

    (12) expresion -> expresion MENOS expresion .
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         reduce using rule 12 (expresion -> expresion MENOS expresion .)
    MAS             reduce using rule 12 (expresion -> expresion MENOS expresion .)
    MENOS           reduce using rule 12 (expresion -> expresion MENOS expresion .)
    PUNTO_COMA      reduce using rule 12 (expresion -> expresion MENOS expresion .)
    POR             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33

  ! POR             [ reduce using rule 12 (expresion -> expresion MENOS expresion .) ]
  ! DIV             [ reduce using rule 12 (expresion -> expresion MENOS expresion .) ]
  ! MOD             [ reduce using rule 12 (expresion -> expresion MENOS expresion .) ]
  ! MAS             [ shift and go to state 29 ]
  ! MENOS           [ shift and go to state 30 ]


state 39

    (13) expresion -> expresion POR expresion .
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         reduce using rule 13 (expresion -> expresion POR expresion .)
    MAS             reduce using rule 13 (expresion -> expresion POR expresion .)
    MENOS           reduce using rule 13 (expresion -> expresion POR expresion .)
    POR             reduce using rule 13 (expresion -> expresion POR expresion .)
    DIV             reduce using rule 13 (expresion -> expresion POR expresion .)
    MOD             reduce using rule 13 (expresion -> expresion POR expresion .)
    PUNTO_COMA      reduce using rule 13 (expresion -> expresion POR expresion .)

  ! MAS             [ shift and go to state 29 ]
  ! MENOS           [ shift and go to state 30 ]
  ! POR             [ shift and go to state 31 ]
  ! DIV             [ shift and go to state 32 ]
  ! MOD             [ shift and go to state 33 ]


state 40

    (14) expresion -> expresion DIV expresion .
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         reduce using rule 14 (expresion -> expresion DIV expresion .)
    MAS             reduce using rule 14 (expresion -> expresion DIV expresion .)
    MENOS           reduce using rule 14 (expresion -> expresion DIV expresion .)
    POR             reduce using rule 14 (expresion -> expresion DIV expresion .)
    DIV             reduce using rule 14 (expresion -> expresion DIV expresion .)
    MOD             reduce using rule 14 (expresion -> expresion DIV expresion .)
    PUNTO_COMA      reduce using rule 14 (expresion -> expresion DIV expresion .)

  ! MAS             [ shift and go to state 29 ]
  ! MENOS           [ shift and go to state 30 ]
  ! POR             [ shift and go to state 31 ]
  ! DIV             [ shift and go to state 32 ]
  ! MOD             [ shift and go to state 33 ]


state 41

    (15) expresion -> expresion MOD expresion .
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PAR_DER         reduce using rule 15 (expresion -> expresion MOD expresion .)
    MAS             reduce using rule 15 (expresion -> expresion MOD expresion .)
    MENOS           reduce using rule 15 (expresion -> expresion MOD expresion .)
    POR             reduce using rule 15 (expresion -> expresion MOD expresion .)
    DIV             reduce using rule 15 (expresion -> expresion MOD expresion .)
    MOD             reduce using rule 15 (expresion -> expresion MOD expresion .)
    PUNTO_COMA      reduce using rule 15 (expresion -> expresion MOD expresion .)

  ! MAS             [ shift and go to state 29 ]
  ! MENOS           [ shift and go to state 30 ]
  ! POR             [ shift and go to state 31 ]
  ! DIV             [ shift and go to state 32 ]
  ! MOD             [ shift and go to state 33 ]


state 42

    (4) instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion . PUNTO_COMA
    (11) expresion -> expresion . MAS expresion
    (12) expresion -> expresion . MENOS expresion
    (13) expresion -> expresion . POR expresion
    (14) expresion -> expresion . DIV expresion
    (15) expresion -> expresion . MOD expresion

    PUNTO_COMA      shift and go to state 44
    MAS             shift and go to state 29
    MENOS           shift and go to state 30
    POR             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33


state 43

    (5) instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .

    R_LET           reduce using rule 5 (instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)
    R_PRINTLN       reduce using rule 5 (instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)
    $end            reduce using rule 5 (instruccion -> R_LET ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)


state 44

    (4) instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .

    R_LET           reduce using rule 4 (instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)
    R_PRINTLN       reduce using rule 4 (instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)
    $end            reduce using rule 4 (instruccion -> R_LET R_MUT ID DOS_PUNTOS tipo IGUAL expresion PUNTO_COMA .)

